--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~54.0.29",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
+    "expo-glass-effect": "~0.1.8",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.10",
